--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "@playwright/test": "^1.56.1",
     "http-server": "^14.1.1"
+  },
+  "dependencies": {
+    "sparnatural-yasgui-plugins": "^2.0.1"
   }
 }
